# tartar-rs

./: .env  Cargo.toml  Dockerfile  Procfile  README.md
sql/: accept_report.sql  check_repost.sql  create_account.sql  get_users.sql  report_user.sql  schema.sql
src/: bot.rs  config.rs  db.rs  error.rs  handler.rs  handlers.rs  main.rs  model.rs  models.rs  routes.rs
