[package]
name = "tartar-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.6.0", default-features = false, features = ["runtime-tokio-rustls", "macros", "chrono", "postgres"] }
chrono = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.137", features = ["derive"] }
teloxide = { version = "0.10.0", features = ["macros", "auto-send", "webhooks-axum"] }
log = "0.4.17"
reqwest = "0.11.11"
axum = { version = "0.5.12", features = ["headers", ] }
axum-sqlx-tx = { version = "0.3.0", features = ["runtime-tokio-rustls", "postgres"] }