[package]
name = "tartar-rs"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
teloxide = { path = "../teloxide/crates/teloxide", features = ["macros", "webhooks-axum"] }
teloxide-core = { path = "../teloxide/crates/teloxide-core" }
teloxide-macros = { path = "../teloxide/crates/teloxide-macros" }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
log = "0.4.22"
reqwest = "0.12.7"
anyhow = "1.0.87"
axum = { version = "0.7.5", features = ["macros", "ws"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = "3.9.0"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "chrono", ] }